--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   <button type="submit" class="btn btn-primary btn-xl">Submit</button>
 </form></h1>
                 
-                <p><br>Mass surveillance and media profiling decides who you are from your activites online. They can then decide how to control you. Help us subvert that. <br>Post annonymously to our Twitterbot who you really are, and build a profile we define.</p>
+                <p><br>Mass surveillance and media profiling decides who you are from your activites online. They can then decide how to control you. Help us subvert that. <br>Post annonymously to our <a href="https://twitter.com/__noiro__">Twitterbot</a> who you really are, and build a profile we define.</p>
                 
             </div>
         </div>
